<resources>
    <string name="app_name" translatable="false">Buscalibre</string>
    <string name="facebook_app_id" translatable="false">618630969073422</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb618630969073422</string>
    <string name="email" translatable="false">Email</string>
    <string name="text13">Ingrese Email</string>
    <string name="text15">Ingrese Email válido</string>
    <string name="connect_error">Error de conexión.</string>
    <string name="server_error">Ha ocurrido un error al intentar comunicarse con el servidor.</string>
    <string name="ingresa_tu_contrase_a">INGRESA TU CONTRASEÑA</string>
    <string name="cual_es_tu_contrase_a_para">¿CUAL ES TU CONTRASEÑA PARA</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="text187">¿CUÁL ES TU NOMBRE?</string>
    <string name="permisses_not_accepted">Buscalibre requiere algunos permisos para operar correctamente.</string>
    <string name="request_permisses">Permissions approved successfully</string>
    <string name="accept_dialog">ACCEPT</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="text1">Select your country:</string>
    <string name="next">Continue</string>
    <string name="text2">Please select a country to continue.</string>
    <string name="text3">Choose what you want to search.</string>
    <string name="text5" translatable="false">Home</string>
    <string name="text4">Log out</string>
    <string name="text6">There are no defined options for the chosen country.</string>
    <string name="text7">Create account:</string>
    <string name="text9">change</string>
    <string name="text10">Name</string>
    <string name="text11">Last name</string>
    <string name="text12">Password</string>
    <string name="text14">Confirm password</string>
    <string name="text16">Confirm</string>
    <string name="text17">Unknown option</string>
    <string name="text18">Search</string>
    <string name="text19">Enter title</string>
    <string name="text20">Title</string>
    <string name="text21">The search path cannot be found.</string>
    <string name="text22">Enter text to search.</string>
    <string name="text23">We have sent you an email to</string>
    <string name="text24">with instructions to create a new password. Check your email to continue.</string>
    <string name="text84">Buscalibre requires the following permissions for its operation.</string>
    <string name="priceview_unavailable">Not available</string>
    <string name="priceview_days">days</string>
    <string name="url_amazon" translatable="false">https://www.amazon.com</string>
    <string name="url_ebay" translatable="false">https://m.ebay.com</string>
    <string name="url_bhphoto" translatable="false">https://www.bhphotovideo.com</string>
    <string name="browse_choose_store">Change store</string>
    <string name="browse_choose_differentiators">Select size, color or other to quote</string>
    <string name="browse_choose_a_product">Enter a product to quote</string>
    <string name="browse_quoting">Calculating...</string>
    <string name="browse_view_quote">See price</string>
    <string name="browse_problem_quoting">Quote error</string>
    <string name="browse_error_quoting_title">An error occurred while pricing</string>
    <string name="browse_error_obtaining_cart">An error occurred while purchasing</string>
    <string name="browse_error_quoting_message">There was a problem quoting the product. Please try again later</string>
    <string name="browse_quote_table_shipping_by_airplane">Air transport</string>
    <string name="browse_quote_table_shipping_by_ship">Marine transport</string>
    <string name="browse_quote_table_condition_new">New</string>
    <string name="browse_quote_table_condition_new_prime">New prime</string>
    <string name="browse_quote_table_condition_used">Used</string>
    <string name="browse_quote_table_condition_refurbished" translatable="false">Refurbished</string>
    <string name="browse_buy">Buy</string>
    <string name="browse_includes"><b> Price includes: </b> Product purchase, Import cost, Duties and IVA</string>
    <string name="browse_cannot_leave_domain">Can\'t leave the store</string>
    <string name="browse_only_store_domain_allowed">The link you are trying to access is outside the store page% s</string>
    <string name="dialog_cotiza_email_title">No pudimos cotizar este producto automáticamente</string>
    <string name="dialog_cotiza_email_body">enter your email and in less than 48 business hours we will send you a price</string>
    <string name="ok" translatable="false">OK</string>
    <string name="error_code">Code</string>
    <string name="error_parse">There was a problem receiving the price</string>
    <string name="observation">Observation</string>
    <string name="caution">Caution</string>
    <string name="placeholder_email" translatable="false">email</string>
    <string name="placeholder_consulta">query</string>
    <string name="text33">Choose a store:</string>
    <string name="text34">There are no stores available.</string>
    <string name="text25">Send</string>
    <string name="text26">Price sent.</string>
    <string name="text27">Sent failed.</string>
    <string name="text28">how can we help you?</string>
    <string name="text29">Question sent.</string>
    <string name="text30">Sent failed.</string>
    <string name="text31">Your session has expired.</string>
    <string name="text55">My account</string>
    <string name="text35">Confirm log out?</string>
    <string name="text36">Do you want to leave the store?</string>
    <string name="text37">Choose a store where to quote.</string>
    <string name="text39" translatable="false">Te traemos</string>
    <string name="text45">Help / Support</string>
    <string name="text46">Cannot continue operation.</string>
    <string name="text48">Change country</string>
    <string name="text47">Books</string>
    <string name="text49">Search books</string>
    <string name="text50">An error has occurred</string>
    <string name="text51">Shopping cart</string>
    <string name="text56">Inbox</string>
    <string name="text57">Message</string>
    <string name="text58">Title</string>
    <string name="text59">Message</string>
    <string name="text60">See more</string>
    <string name="text61">No messages</string>
    <string name="text62">Read</string>
    <string name="text63">Payment methods</string>
    <string name="text64">An error has occurred trying to retrieve the information.</string>
    <string name="text67">You have not yet registered payment methods.</string>
    <string name="text68">ENDED IN</string>
    <string name="text65">Are you sure you want to delete the selected payment method?</string>
    <string name="text66">ADD</string>
    <string name="text69">Payment Method</string>
    <string name="text71">Payment method added successfully</string>
    <string name="text72">An error has occurred adding payment method. Please try again later.</string>
    <string name="text75">Sell books</string>
    <string name="text77">NOTE: the sales service is only available in Santiago.</string>
    <string name="text79">Add books</string>
    <string name="text375">Not available for this country.</string>
    <string name="text376">You have no books on your list.</string>
    <string name="text377">To confirm the sale of your book list, you must have added books for a total value greater than:</string>
    <string name="text386">Title</string>
    <string name="text387">Description</string>
    <string name="text388">Quote result</string>
    <string name="text389">Suggested price:</string>
    <string name="usedmay">USED</string>
    <string name="newmay">NEW</string>
    <string name="isbn" translatable="false">ISBN</string>
    <string name="text382">You have left</string>
    <string name="text383">You meet the minimum amount to make the sale</string>
    <string name="text384">to complete the sale</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="text90">Vender Libros</string>
    <string name="text91">You must complete the minimum amount to make the sale.</string>
    <string name="text92">Withdrawal address</string>
    <string name="text93">Postal code (Optional)</string>
    <string name="text94">Country</string>
    <string name="text95">City</string>
    <string name="text96">Confirm the withdrawal address:</string>
    <string name="text97">Please complete the field</string>
    <string name="text98">Address</string>
    <string name="text99">Do you confirm the sale?</string>
    <string name="text78">Confirm sale</string>
    <string name="text88">County</string>
    <string name="text100">Thanks!!!</string>
    <string name="text101">Finish</string>
    <string name="text102">We couldn\'t find the book you scanned, please try again.</string>
    <string name="text103">Back</string>
    <string name="text104">Please wait a moment, we are calculating the suggested values.</string>
    <string name="text105">Scan ISBN</string>
    <string name="text106">Payments</string>
    <string name="text107">Consignations</string>
    <string name="text109">Sales value / Quantity</string>
    <string name="text110">Complete</string>
    <string name="text111">In process</string>
    <string name="text115">Total payment:</string>
    <string name="text116">Sale period</string>
    <string name="text117">An error has occurred</string>
    <string name="text118">State</string>
    <string name="text119">Payment date</string>
    <string name="text120">Bank / Account Type</string>
    <string name="text121">Account number</string>
    <string name="text122" translatable="false">Total </string>
    <string name="text123">Are you sure you want to delete the book?</string>
    <string name="text124">There are no more items in the list.</string>
    <string name="text125">Can\'t scan?</string>
    <string name="text126">Enter the ISBN code of the book (13 digits)</string>
    <string name="ingresa_rut">Identification number (RUT)</string>
    <string name="panel_de_control">Control panel</string>
    <string name="valid_rut">Enter valid taxID</string>
    <string name="iniciar_con_facebook">Init Facebook</string>
    <string name="not_ebooks_available">No ebooks available</string>
    <string name="text73">Do you want to read your digital books offline?</string>
    <string name="accept_permissions">Permission is granted</string>
    <string name="revoke_permissions">Permission is revoked</string>
    <string name="my_ebooks">E-books reader</string>
    <string name="ebooks" translatable="false">Ebooks</string>
    <string name="audiobooks" translatable="false">Audiobooks</string>
    <string name="number_sell_id">Consignation Number #</string>
    <string name="book_condition">Book Condition</string>
    <string name="consignaci_n">Clearance:</string>
    <string name="estado">Status:</string>
    <string name="recibidos">Received:</string>
    <string name="por_retirar">Pending Pickup:</string>
    <string name="anulados">Cancelled:</string>
    <string name="pendientes">Pending:</string>
    <string name="mis_libros_a_la_venta">My Books on sale</string>
    <string name="fecha">Date:</string>
    <string name="muchas_gracias_pronto_nos_pondremos_en_contacto_contigo_para_ir_a_buscar_los_libros_puedes_revisar_el_estado_de_esta_operaci_n_en_panel_de_control_consignaciones">Thanks. We will contact you soon to pick up the books. You can review the status of the operation in Control Panel > Sales</string>
    <string name="not_show_tutorial_again">Do not show again.</string>
    <string name="text239">SKIP</string>
    <string name="ver_pasos">SHOW STEPS</string>
</resources>