<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="1000dp"
    android:background="@color/white">

    <com.buscalibre.app2.util.ViewPagerCustomDuration
        android:id="@+id/vpTutorialSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />
        android:layout_above="@+id/rlButtonsPager"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/rlButtonsPager"
        android:layout_above="@+id/llNotShowTutorial"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:id="@+id/layoutTutorialDots"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:orientation="horizontal" />
        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/btSkipTutorial"
            android:text="@string/text239"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:background="@drawable/orange_button_selector"/>

        <Button
            android:id="@+id/btNextTutorial"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/orange_button_selector"
            android:text="@string/ver_pasos"
            android:textColor="@color/white" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llNotShowTutorial"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/cbNotShowTutorial"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/not_show_tutorial_again"
            android:textColor="@color/lightBlack"/>
    </LinearLayout>-->
</RelativeLayout>