<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MessageDetailActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/ivLogoCountry"
        android:layout_marginTop="10dp"
        android:src="@drawable/buscalibre_logo_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ivLogoCountry"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@+id/btSeeMore"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text58"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleDetail"
            android:background="@drawable/background_message"
            android:paddingTop="10dp"
            android:lines="1"
            android:textColor="@color/md_black_1000"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text59"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvMessageDetail"
            android:background="@drawable/background_message"
            android:paddingTop="5dp"
            android:textColor="@color/md_black_1000"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"/>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/btSeeMore"
        android:background="@color/oran_bl"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/text60"
        android:textColor="@color/md_white_1000"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>